--- a/docs/react/基础.md
+++ b/docs/react/基础.md
@@ -1,16 +1,17 @@
 ---
-title: 【vue】跨域解决方案之proxyTable
-date: 2017-12-28
+title: 【vue】测试
+date: 2020-08-05
 categories:
- - frontEnd
+ - 前端
 tags:
  - vue
 ---
 
 # react 基础
 
-## react-dom
 
+## react-dom
+![Image from dependency](./test.jpg)
 ## createClass
 # react 基础
 
