--- a/docs/react/基础.md
+++ b/docs/react/基础.md
@@ -4,7 +4,7 @@ date: 2020-08-05
 categories:
  - 前端
 tags:
- - vue
+ - react
 ---
 
 # react 基础
@@ -13,49 +13,4 @@ tags:
 ## react-dom
 ![Image from dependency](./test.jpg)
 ## createClass
-# react 基础
 
-## react-dom
-
-## createClass
-# react 基础
-
-## react-dom
-
-## createClass
-# react 基础
-
-## react-dom
-
-## createClass
-# react 基础
-
-## react-dom
-
-## createClass
-# react 基础
-
-## react-dom
-
-## createClass
-# react 基础
-
-## react-dom
-
-## createClass
-
-# react 基础
-
-## react-dom
-
-## createClass
-# react 基础
-
-## react-dom
-
-## createClass
-# react 基础
-
-## react-dom
-
-## createClass
