--- a/docs/else/缓存.md
+++ b/docs/else/缓存.md
@@ -11,6 +11,8 @@ tags:
 缓存，我的绕不过去的痛！我们一般分为协商缓存和强缓存两种。协商缓存，就是需要和服务器进行协商，最终确定是否使用本地缓存！
 :::
 
+<!-- more -->
+
 下面记录下我的对于缓存的理解
 
 ## 两种缓存的问题点
@@ -20,7 +22,7 @@ tags:
 强缓存主要通过设置 http 请求头的 Cache-Control 和 Expire 两个字段控制。重点考虑 Cache-Control 这个字段。
 一般我们会设置 Cache-Control 的值为 “public, max-age=xxx”，表示在xxx秒内再次访问该资源，均使用本地的缓存，不再向服务器发起请求。但是如果在这个时间，服务器上面的资源已经更新了，但是客户端得到的内容还是之前的，这怎么办？
 
-expire 的值是设置设置，因此，要求服务端时间和客户端时间完全一致。
+expire 的值是设置时间，因此，要求服务端时间和客户端时间完全一致。
 
 ### 协商缓存
 协商缓存常用的字段有ETag,Last-Modified
