修改文件名

--- a/docs/js/优化.md
+++ b/docs/js/优化.md
@@ -1,3 +1,12 @@
+---
+title: 一些优化技巧
+date: 2021-04-22
+categories:
+  - 前端
+tags:
+  - js
+---
+
 <!-- // 性能优化： 
 // 减少渲染，比如useMemo,memo,unstable_batchedUpdates,useCallBack,
 // 父组件更新引起的子组件更新
