修复打包失败的问题

--- a/docs/js/优化.md
+++ b/docs/js/优化.md
@@ -7,12 +7,5 @@ tags:
   - js
 ---
 
-<!-- // 性能优化： 
-// 减少渲染，比如useMemo,memo,unstable_batchedUpdates,useCallBack,
-// 父组件更新引起的子组件更新
-// 接口缓存，适用于restful风格的接口，
-// 某些接口延迟请求时机，避免请求堵塞
-// 再次发起同一个请求前取消前一个接口 cancelToken
-// 骨架屏展示
-// cdn，图片lazyload，
-//  -->
+
+## test
